--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -138,7 +138,7 @@
             padding: 100px 300px;
             position: relative;
             margin-top: 100px;
-            background-image: url("../img/");
+            background-image: url("../img/trust.png");
             background-size: cover;
             color: white;
             text-shadow: 0.1em 0.1em 0.1em black;
