--- a/Fundraising/wwwroot/MemberCentre/UserMessage.html
+++ b/Fundraising/wwwroot/MemberCentre/UserMessage.html
@@ -36,11 +36,11 @@
       <div class="mx-auto" style="width: 80%">
         <h5 class="ms-4 mt-3">聯絡訊息</h5>
       </div>
-
+      <!-- 聊天室 -->
       <div class="clearfix mx-auto card my-3">
         <div class="mt-3">
           <div class="chat-app mx-auto">
-            <!-- 對象(左) -->
+            <!-- 聊天清單 -->
             <div id="plist" class="people-list">
               <!-- 搜尋input -->
               <div class="input-group">
@@ -54,36 +54,16 @@
 
               <!-- 訊息對象 -->
               <ul class="list-unstyled chat-list mt-2 mb-0">
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar1.png"
-                    alt="avatar"
-                  />
+                <li
+                  class="clearfix shadow-sm my-1 border"
+                  @click="nowchatting,getMsg(item)"
+                  v-for="item in chatroom"
+                >
+                  <img :src="item.userPhoto" alt="avatar" />
                   <div class="about">
-                    <div class="name">史蒂夫</div>
-                    <div class="status">
-                      <p>30分鐘前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border chatting">
-                  <img src="../img/PersonalPhoto.jpg" alt="avatar" />
-                  <div class="about">
-                    <div class="name">戴夫</div>
+                    <div class="name">{{item.userName}}</div>
                     <div class="status">
                       <p>1天前</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix shadow-sm my-1 border">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">蒙其．Ｄ．喬瑟夫</div>
-                    <div class="status">
-                      <p>3天前</p>
                     </div>
                   </div>
                 </li>
@@ -93,16 +73,10 @@
             <!-- 聊天(右) -->
             <div class="chat">
               <!-- 目前對話對象(標題) -->
-              <div class="chat-header clearfix mt-2">
-                <a href="#" data-toggle="modal" data-target="#view_info">
-                  <img
-                    class="img-"
-                    src="../img/PersonalPhoto.jpg"
-                    alt="avatar"
-                  />
-                </a>
+              <div class="chat-header clearfix mt-2" v-if="chatting!=''">
+                <img src="../img/PersonalPhoto.jpg" alt="avatar" />
                 <div class="chat-about">
-                  <h6 class="m-b-0">戴夫</h6>
+                  <h6 class="m-b-0">{{chattingname}}</h6>
                   <small>上次訊息: 2022-12-29 22:38</small>
                 </div>
               </div>
@@ -113,32 +87,33 @@
                   <!-- 每一筆聊天 -->
                   <li class="clearfix" v-for="item in messages">
                     <!-- 判斷為誰發送 -->
-                    <div v-if="item.fromUserId==msg.fromUserId">
+                    <div v-if="item.sender==userid">
                       <div class="message-data text-end">
-                        <span class="message-data-time">10:12 AM, 今天</span>
+                        <span class="message-data-time">{{item.sentTime}}</span>
                       </div>
                       <div class="message other-message float-right shadow-sm">
-                        {{item.contact}}
+                        {{item.content}}
                       </div>
                     </div>
                     <div v-else>
                       <div class="message-data">
-                        <span class="message-data-time">10:12 AM, 今天</span>
+                        <span class="message-data-time">{{item.sentTime}}</span>
                       </div>
                       <div class="message my-message shadow-sm">
-                        {{item.contact}}
+                        {{item.content}}
                       </div>
                     </div>
                   </li>
                 </ul>
               </div>
-              <div class="chat-message clearfix">
+              <div v-if="chatting!=''" class="chat-message clearfix">
                 <div class="input-group mb-0">
                   <input
                     type="text"
                     class="form-control"
                     placeholder="輸入訊息"
-                    v-model="msg.contact"
+                    autocomplete="off"
+                    v-model="msg.content"
                     id="message-input"
                   />
                   <button
