--- a/Fundraising/wwwroot/ProductPage/creditcard.html
+++ b/Fundraising/wwwroot/ProductPage/creditcard.html
@@ -9,10 +9,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/layout.css">
     <title>信用卡付款</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
     <style>
         * {
@@ -78,14 +80,14 @@
             width: 300px;
         }
 
-        #cardnumber input:focus,
-        #carddate input:focus,
-        #cardsafecode input:focus,
-        .cardinformation input:focus {
-            border: 2px solid rgb(121, 121, 121);
-        }
+            #cardnumber input:focus,
+            #carddate input:focus,
+            #cardsafecode input:focus,
+            .cardinformation input:focus {
+                border: 2px solid rgb(121, 121, 121);
+            }
 
-        .form>div {
+        .form > div {
             padding: 14px;
         }
 
@@ -97,102 +99,138 @@
 </head>
 
 <body>
-    <form class="container">
-        <div class="form login">
-            <div>
-                <p style="text-align: center; font-size: 20px;">※ 信用卡交易資訊 Credit Card Information</p>
-            </div>
-            <div class="creditcardnumber">
-                <label for="cardnumber">信用卡卡號</label>
-                <img style="width: 80px; padding: 0px 6px;" src="../img/creditcard.png" alt="">
-                <div id="cardnumber" name="cardnumber">
-                    <input type="text" maxlength="4" class="autotab">
-                    <span>-</span>
-                    <input type="text" maxlength="4" class="autotab">
-                    <span>-</span>
-                    <input type="text" maxlength="4" class="autotab">
-                    <span>-</span>
-                    <input type="text" maxlength="4" class="autotab">
-                    <p style="font-size: 12px; margin-bottom: 0px !important;">本交易須通過Visa/MasterCard驗證。</p>
+        <form class="container app" >
+            <div class="form login">
+                <div>
+                    <p style="text-align: center; font-size: 20px;">※ 信用卡交易資訊 Credit Card Information</p>
+                </div>
+                <div class="creditcardnumber">
+                    <label for="cardnumber">信用卡卡號</label>
+                    <img style="width: 80px; padding: 0px 6px;" src="../img/creditcard.png" alt="">
+                    <div id="cardnumber" name="cardnumber">
+                        <input type="text" maxlength="4" class="cardnumber1 autotab">
+                        <span>-</span>
+                        <input type="text" maxlength="4" class="cardnumber2 autotab">
+                        <span>-</span>
+                        <input type="text" maxlength="4" class="cardnumber3 autotab">
+                        <span>-</span>
+                        <input type="text" maxlength="4" class="cardnumber4 autotab">
+                        <p style="font-size: 12px; margin-bottom: 0px !important;">本交易須通過Visa/MasterCard驗證。</p>
+                    </div>
+                </div>
+                <div class="creditcarddate">
+                    <label for="carddate">卡片有效期限</label>
+                    <div id="carddate" name="carddate">
+                        <input type="text" maxlength="2" class="autotab" placeholder="MM">
+                        <span>-</span>
+                        <input type="text" maxlength="2" class="autotab" placeholder="YY">
+                    </div>
+                </div>
+                <div class="creditcardsafecode">
+                    <label for="carddate">卡片安全碼</label>
+                    <div id="cardsafecode" name="cardsafecode">
+                        <input type="text" maxlength="3">
+                        <img style="width:48px;" src="../img/safecode.png" alt="">
+                    </div>
+                </div>
+                <div class="cardinformation">
+                    <label for="ownername">持卡人姓名</label>
+                    <div id="ownername" name="ownername">
+                        <input type="text" placeholder="請輸入卡片上的姓名">
+                    </div>
+                </div>
+                <div class="cardinformation">
+                    <label for="ownernumber">手機號碼</label>
+                    <div id="ownernumber" name="ownernumber">
+                        <input type="text" maxlength="10">
+                    </div>
+                </div>
+                <div class="cardinformation">
+                    <label for="ownermail">電子信箱</label>
+                    <div id="ownermail" name="ownermail">
+                        <input type="text" placeholder="選填">
+                    </div>
+                </div>
+                <div class="cardinformation">
+                    <label for="owneraddress">帳單地址</label>
+                    <div id="owneraddress" name="owneraddress">
+                        <input style="width: 100%;" type="text" placeholder="選填">
+                    </div>
+                </div>
+                <div>
+                    <p style="color: #9d9d9d;">
+                        注意事項<br>
+                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp非經持卡人同意，如有冒用他人卡片盜刷之行為，刑法最高判五年有期徒刑<br>
+                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp本頁面已使用256bitSSL安全加密機制<br>
+                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp為確保網路交易安全，您同意本公司得就此筆交易向發卡銀行、收單銀行及持卡人核對是否屬實<br>
+                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp信用卡成功交易後否認，如經判定為本人或授權刷卡的行為，相關損失及費用須自行負擔
+                    </p>
+                </div>
+                <div style="text-align: center;">
+                    <input id="pay" type="button" value="立即付款" v-on:click="payclick" style="border: #047c51 solid 2px;
+                    background-color: #047c51;
+                    color: white; padding: 6px 10px;">
                 </div>
             </div>
-            <div class="creditcarddate">
-                <label for="carddate">卡片有效期限</label>
-                <div id="carddate" name="carddate">
-                    <input type="text" maxlength="2" class="autotab" placeholder="MM">
-                    <span>-</span>
-                    <input type="text" maxlength="2" class="autotab" placeholder="YY">
-                </div>
-            </div>
-            <div class="creditcardsafecode">
-                <label for="carddate">卡片安全碼</label>
-                <div id="cardsafecode" name="cardsafecode">
-                    <input type="text" maxlength="3">
-                    <img style="width:48px;" src="../img/safecode.png" alt="">
-                </div>
-            </div>
-            <div class="cardinformation">
-                <label for="ownername">持卡人姓名</label>
-                <div id="ownername" name="ownername">
-                    <input type="text" placeholder="請輸入卡片上的姓名">
-                </div>
-            </div>
-            <div class="cardinformation">
-                <label for="ownernumber">手機號碼</label>
-                <div id="ownernumber" name="ownernumber">
-                    <input type="text" maxlength="10">
-                </div>
-            </div>
-            <div class="cardinformation">
-                <label for="ownermail">電子信箱</label>
-                <div id="ownermail" name="ownermail">
-                    <input type="text" placeholder="選填">
-                </div>
-            </div>
-            <div class="cardinformation">
-                <label for="owneraddress">帳單地址</label>
-                <div id="owneraddress" name="owneraddress">
-                    <input style="width: 100%;" type="text" placeholder="選填">
-                </div>
-            </div>
-            <div>
-                <p style="color: #9d9d9d;">
-                    注意事項<br>
-                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp非經持卡人同意，如有冒用他人卡片盜刷之行為，刑法最高判五年有期徒刑<br>
-                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp本頁面已使用256bitSSL安全加密機制<br>
-                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp為確保網路交易安全，您同意本公司得就此筆交易向發卡銀行、收單銀行及持卡人核對是否屬實<br>
-                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp信用卡成功交易後否認，如經判定為本人或授權刷卡的行為，相關損失及費用須自行負擔
-                </p>
-            </div>
-            <div style="text-align: center;">
-                <input id="pay" type="submit" value="立即付款" style="border: #047c51 solid 2px;
-                background-color: #047c51;
-                color: white; padding: 6px 10px;">
-            </div>
-        </div>
-    </form>
+        </form>
+    
 
 
 
     <script src="../layout/layout.js"></script>
     <script>
-        //輸入想要跳下一格的class名稱
-        var tablist = ["autotab", "autotab2", "autotab3"];
 
-        //特殊功能鍵，防止修改時按了ctrl shift alt、方向鍵、del之類的被跳到下一格
-        var functionkey = [8, 9, 16, 17, 18, 20, 33, 34, 35, 36, 37, 38, 39, 40, 45, 46, 93, 144];
-        tablist.forEach(function (element) {
-            $("." + element).on("keydown", function (event) {
-                //next
-                if ($(this).attr("maxLength") == $(this).val().length && (functionkey.indexOf(event.keyCode) == -1)) {
-                    $(this).nextAll("." + element).first().focus();
+
+        var app = new Vue({
+            el: ".app",
+            data: {
+                orderpayList: {}
+            },
+            mounted: function () {
+                //輸入想要跳下一格的class名稱
+                var tablist = ["autotab", "autotab2", "autotab3"];
+
+                //特殊功能鍵，防止修改時按了ctrl shift alt、方向鍵、del之類的被跳到下一格
+                var functionkey = [8, 9, 16, 17, 18, 20, 33, 34, 35, 36, 37, 38, 39, 40, 45, 46, 93, 144];
+                tablist.forEach(function (element) {
+                    $("." + element).on("keydown", function (event) {
+                        //next
+                        if ($(this).attr("maxLength") == $(this).val().length && (functionkey.indexOf(event.keyCode) == -1)) {
+                            $(this).nextAll("." + element).first().focus();
+                        }
+                        //prev
+                        if ($(this).val().length == 0 && event.keyCode == 8) {
+                            $(this).prevAll("." + element).first().focus();
+                        }
+                    });
+                });
+            }
+            ,
+            methods: {
+                payclick: function () {
+                    console.log(this.orderpayList);
+                    var cardnumber = '';
+                    for (var i = 1; i < 5; i++) {
+                        cardnumber += $('.cardnumber' + i).val();
+                    }
+                    this.orderpayList["MasterCardID"] = cardnumber;
+                    $.ajax({
+                        type: 'POST',
+                        url: '/api/Orders/',
+                        contentType: "application/json",
+                        data: JSON.stringify(this.orderpayList),
+                        error: function () {
+                            console.log('錯誤回傳');
+                            console.log(this.data);
+                        },
+                        success: function () {
+                            alert("成功");
+                        }
+                    })
                 }
-                //prev
-                if ($(this).val().length == 0 && event.keyCode == 8) {
-                    $(this).prevAll("." + element).first().focus();
-                }
-            });
-        });
+            }
+        })
+        app.orderpayList = JSON.parse(sessionStorage.getItem("orderpayList"))
 
     </script>
 </body>
