--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -139,9 +139,9 @@
                 <li class="page-item    ">
                     <a class="page-link">Previous</a>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item" v-for="(n,key) in tolpage"><a class="page-link" href="#">{{key+1}}</a></li>
+                <!--<li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>-->
                 <li class="page-item">
                     <a class="page-link" href="#">Next</a>
                 </li>
@@ -300,11 +300,19 @@
         var app = new Vue({
             el: ".container",
             data: {
-                fliterList: []
+                fliterList: [],
+                tolpage: 0
             },
             mounted: function () {
                 //alert(123)
                 //document.querySelector('.wid').style.width = '10%'
+                $.ajax({
+                    type: 'Get',
+                    url: '/api/Fundraising/tolpage',
+                    success: function (e) {
+                        app.tolpage = parseInt(e);
+                    }
+                })
                 $.ajax({
                     type: 'Get',
                     url: '/api/Fundraising',
