--- a/Fundraising/wwwroot/CMS/Odetails.html
+++ b/Fundraising/wwwroot/CMS/Odetails.html
@@ -20,162 +20,167 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/mystyle.css">
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
+    <link href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/logincheck.js"></script>
 </head>
 
-<body id="app">
-    <div class="container-fluid p-0 bg-theme">
-        <!-- 導覽列 -->
-        <div id="myheader" class="bg-white" style="background-image: url(../img/headerbackgroud.png); background-size: cover;">
+<body>
+    <div id="app">
+        <loading :can-cancel="true"></loading>
+        <div class="container-fluid p-0 bg-theme">
+            <!-- 導覽列 -->
+            <div id="myheader" class="bg-white"
+                style="background-image: url(../img/headerbackgroud.png); background-size: cover;">
 
-        </div>
-        <!-- 結束 導覽列 -->
-        <div class=" container-fluid px-5 p-4">
-            <div class="row justify-content-center">
-                <!-- 側邊欄位 -->
+            </div>
+            <!-- 結束 導覽列 -->
+            <div class=" container-fluid px-5 p-4">
+                <div class="row justify-content-center">
+                    <!-- 側邊欄位 -->
 
-                <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
-                    <br>
-                    <div id="mysider"></div>
-                </ul>
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                        <br>
+                        <div id="mysider"></div>
+                    </ul>
 
-                <!-- 結束 側邊欄位 -->
-                <!--主要內容-->
-                <div class="col-10">
-                    <div class="px-3 ">
+                    <!-- 結束 側邊欄位 -->
+                    <!--主要內容-->
+                    <div class="col-10">
+                        <div class="px-3 ">
 
-                        <div class="item-style bg-white mb-5">
-                            <!-- ===============================================================================================================  -->
-                            <div class="card-header py-3 mb-3">
-                                <h3 class="m-0">贊助明細</h6>
-                            </div>
-                            <div class="row justify-content-center">
-                                <div class="col-11 mb-5">
-                                    <table class="table mb-0">
-                                        <thead class="thead-dark">
-                                            <tr>
-                                                <th colspan="6">贊助編號: {{odetailsinfo.orderId}}</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>會員名稱:</td>
-                                                <td>
-                                                    <p>{{odetailsinfo.recipientName}}</p>
-                                                </td>
-                                                <td>贊助日期:</td>
-                                                <td>
-                                                    <p>{{odetailsinfo.purchaseTime}}</p>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>手機:</td>
-                                                <td>
-                                                    <p>{{odetailsinfo.recipientPhone}}</p>
-                                                </td>
-                                                <td>信箱:</td>
-                                                <td>
-                                                    <p>{{odetailsinfo.recipientMail}}</p>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>信用卡號:</td>
-                                                <td>
-                                                    <p>{{odetailsinfo.masterCardId}}</p>
-                                                </td>
-                                                <td>送貨地址:</td>
-                                                <td colspan="3">
-                                                    <p>{{odetailsinfo.recipientAddress}}</p>
-                                                </td>
-                                            </tr>
+                            <div class="item-style bg-white mb-5">
+                                <!-- ===============================================================================================================  -->
+                                <div class="card-header py-3 mb-3">
+                                    <h3 class="m-0">贊助明細</h6>
+                                </div>
+                                <div class="row justify-content-center">
+                                    <div class="col-11 mb-5">
+                                        <table class="table mb-0">
+                                            <thead class="thead-dark">
+                                                <tr>
+                                                    <th colspan="6">贊助編號: {{odetailsinfo.orderId}}</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>會員名稱:</td>
+                                                    <td>
+                                                        <p>{{odetailsinfo.recipientName}}</p>
+                                                    </td>
+                                                    <td>贊助日期:</td>
+                                                    <td>
+                                                        <p>{{odetailsinfo.purchaseTime}}</p>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>手機:</td>
+                                                    <td>
+                                                        <p>{{odetailsinfo.recipientPhone}}</p>
+                                                    </td>
+                                                    <td>信箱:</td>
+                                                    <td>
+                                                        <p>{{odetailsinfo.recipientMail}}</p>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>信用卡號:</td>
+                                                    <td>
+                                                        <p>{{odetailsinfo.masterCardId}}</p>
+                                                    </td>
+                                                    <td>送貨地址:</td>
+                                                    <td colspan="3">
+                                                        <p>{{odetailsinfo.recipientAddress}}</p>
+                                                    </td>
+                                                </tr>
 
-                                        </tbody>
-                                    </table>
-                                    <div class="h3 bg-dark text-light p-2">
-                                        贊助資訊<span></span>
-                                    </div>
-                                    <div class="row ">
-                                        <div class="col-4">
-                                            <img :src="odetailsinfo.planPhoto" alt=""
-                                                style="width: 100%;height: 200px;">
+                                            </tbody>
+                                        </table>
+                                        <div class="h3 bg-dark text-light p-2">
+                                            贊助資訊<span></span>
                                         </div>
-                                        <div class="col-8">
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <h3>{{odetailsinfo.planTitle}}</h3>
-                                                </div>
-                                                <div class="col-12 mb-3">
-                                                    選擇的贊助內容
-                                                </div>
-                                                <div class="col-7">{{odetailsinfo.planContent}}</div>
-                                                <div class="col-2  pr-3">
-                                                    <div>方案金額: </div>
-                                                    <div class="mb-1">加碼贊助: </div>
-                                                    <div style="font-size: 1.3rem;">總金額: </div>
-                                                </div>
-                                                <div class="col-1 text-right">
-                                                    <div>NT$ </div>
-                                                    <div class="mb-1">NT$ </div>
-                                                    <div style="font-size: 1.3rem;">NT$</div>
-                                                </div>
-                                                <div class="col-1 text-right p-0">
-                                                    <div>{{odetailsinfo.planPrice}}</div>
-                                                    <div class="mb-1">{{odetailsinfo.addSponsorship}} </div>
-                                                    <div style="font-size: 1.3rem;">{{odetailsinfo.planPrice +
-                                                        odetailsinfo.addSponsorship}}</div>
+                                        <div class="row ">
+                                            <div class="col-4">
+                                                <img :src="odetailsinfo.planPhoto" alt=""
+                                                    style="width: 100%;height: 200px;">
+                                            </div>
+                                            <div class="col-8">
+                                                <div class="row">
+                                                    <div class="col-12">
+                                                        <h3>{{odetailsinfo.planTitle}}</h3>
+                                                    </div>
+                                                    <div class="col-12 mb-3">
+                                                        選擇的贊助內容
+                                                    </div>
+                                                    <div class="col-7">{{odetailsinfo.planContent}}</div>
+                                                    <div class="col-2  pr-3">
+                                                        <div>方案金額: </div>
+                                                        <div class="mb-1">加碼贊助: </div>
+                                                        <div style="font-size: 1.3rem;">總金額: </div>
+                                                    </div>
+                                                    <div class="col-1 text-right">
+                                                        <div>NT$ </div>
+                                                        <div class="mb-1">NT$ </div>
+                                                        <div style="font-size: 1.3rem;">NT$</div>
+                                                    </div>
+                                                    <div class="col-1 text-right p-0">
+                                                        <div>{{odetailsinfo.planPrice}}</div>
+                                                        <div class="mb-1">{{odetailsinfo.addSponsorship}} </div>
+                                                        <div style="font-size: 1.3rem;">{{odetailsinfo.planPrice +
+                                                            odetailsinfo.addSponsorship}}</div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <!-- <div class="col-12 text-light">
+                                            <!-- <div class="col-12 text-light">
                                             <div class="text-right px-5 mb-5">
                                                 <a herf="#" class="btn btn-outline-success mx-3">返回</a>
                                                 <a href="#" class="btn btn-danger">確認送出</a>
                                             </div>
                                         </div> -->
+                                        </div>
                                     </div>
                                 </div>
+                                <!-- ===============================================================================================================  -->
                             </div>
-                            <!-- ===============================================================================================================  -->
                         </div>
                     </div>
-                </div>
-                <!-- 結束 主要內容 -->
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- 頁尾 -->
-    <div id="myfooter"></div>
-    <!-- 結束 頁尾r -->
-    <!-- 回上方按鈕-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
-    <!-- 登出彈跳視窗-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <!-- 結束 主要內容 -->
                 </div>
             </div>
         </div>
-        <select name="" id="">
-            <option value="">1</option>
-            <option value="">2</option>
-            <option value="">3</option>
-        </select>
+        <!-- 頁尾 -->
+        <div id="myfooter"></div>
+        <!-- 結束 頁尾r -->
+        <!-- 回上方按鈕-->
+        <a class="scroll-to-top rounded" href="#page-top">
+            <i class="fas fa-angle-up"></i>
+        </a>
+        <!-- 登出彈跳視窗-->
+        <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                        <a class="btn btn-primary" href="login.html">Logout</a>
+                    </div>
+                </div>
+            </div>
+            <select name="" id="">
+                <option value="">1</option>
+                <option value="">2</option>
+                <option value="">3</option>
+            </select>
+        </div>
     </div>
     <script src="./js/myjs.js"></script>
 
@@ -190,25 +195,44 @@
     <script src="js/demo/chart-pie-demo.js"></script> -->
     <!-- Chart.js 套件引入 -->
     <script>
-        const { createApp } = Vue
+        Vue.use(VueLoading);
 
-        createApp({
-            data() {
-                return {
-                    odetailsinfo: [],
-                    employeeinfo: []
+        var app = new Vue({
+            el: '#app',
+            data: {
+                LoaderVisiable: false,
+                odetailsinfo: [],
+                employeeinfo: []
 
-                }
+            },
+            components: {
+                Loading: VueLoading
             },
             methods: {
+                open: function () {
+                    console.log('open');
+                    let loader = this.$loading.show({
+                        loader: 'dots'
+                    });
+                    // setTimeout(() => loader.hide(), 0.5 * 1000);
+                },
+                logout: function () {
+                    // alert("1523 ")
+                    axios.get("/api/back/logout").then(res => { if (res.data == "已登出") { window.location.reload() } })
+                },
                 checkOlist: function (index) {
                     sessionStorage.setItem('orderId', index)
                 }
             },
+
             mounted() {
+                let loader = this.$loading.show({
+                    loader: 'dots'
+                });
                 axios.get(`/api/back/Odetails/${sessionStorage.getItem("orderId")}`)
                     .then((response) => {
                         this.odetailsinfo = response.data[0]
+                        setTimeout(() => loader.hide(), 0.5 * 1000);
                     });
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
 
@@ -216,12 +240,8 @@
                     console.log(this.employeeinfo)
                 })
 
-
-                // this.orderlist = response.data
-                // console.log(response.data.length)
-
-            },
-        }).mount('#app')
+            }
+        })
     </script>
 </body>
 
